--- a/src/scss/reset.scss
+++ b/src/scss/reset.scss
@@ -25,8 +25,8 @@ body {
 
 body {
     font-family: $ff-main;
-    font-size: 14px;
-    font-weight: 400;
+    font-size: 24px;
+    font-weight: 300;
     color: $text-primary;
     line-height: 1.2;
     -ms-text-size-adjust: 100%;
@@ -35,6 +35,14 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+
+	@media (max-width: $tablet) {
+		font-size: 20px;
+	}
+
+	@media (max-width: $mobile-l) {
+		font-size: 19px;
+	}
 }
 
 input,
