--- a/src/scss/base/textfield.scss
+++ b/src/scss/base/textfield.scss
@@ -1,62 +1,120 @@
 // Поле ввода
 .tf {
+	--font-size: 24px;
+	--color: #{create-rgba($text-primary, .7)};
+	--padding-sides: 24px;
+
     position: relative;
     width: 100%;
-    
+	display: block;
+
     &.has-change-label {
 
-        & .tf__field label {
-            top: 0;
-            transform: translate(-16%, 0) scale(0.7);
+        & .tf__label {
+			opacity: 0;
+            // top: 0;
+            // transform: translate(-16%, 0) scale(0.7);
         }
     }
+
+	&.has-icon {
+
+		& .tf__field {
+			position: relative;
+
+			&::before {
+				content: '';
+				position: absolute;
+				top: 50%;
+				left: var(--padding-sides);
+				transform: translate(0, -50%);
+				width: var(--icon-size);
+				aspect-ratio: 1;
+				display: block;
+				background: center/contain no-repeat var(--icon);
+			}
+
+			& input {
+				padding-left: calc(var(--icon-size) + var(--padding-sides) + 24px);
+
+				@media (max-width: $mobile-l) {
+					padding-left: calc(var(--icon-size) + var(--padding-sides) + 12px);
+				}
+			}
+
+			& .tf__label {
+				left: calc(var(--icon-size) + var(--padding-sides) + 24px);
+
+				@media (max-width: $mobile-l) {
+					left: calc(var(--icon-size) + var(--padding-sides) + 12px);
+				}
+			}
+		}
+	}
+
+	@media (max-width: $tablet) {
+		--font-size: 20px;
+		--padding-sides: 20px;
+	}
+
+	@media (max-width: $mobile-l) {
+		--font-size: 14px;
+		--padding-sides: 15px;
+	}
 }
 
 .tf__field {
     position: relative;
     width: 100%;
+	height: 52px;
     display: flex;
     align-items: center;
     background: none;
 
-    &_textarea {
-        height: 80px;
-    }
+    // &_textarea {
+    //     height: 80px;
+    // }
+
+	&.is-textarea {
+
+		& textarea {
+			padding: 8px var(--padding-sides);
+		}
+
+		& .tf__label {
+			top: 12px;
+			transform: translate(0, 0);
+		}
+	}
 }
 
 .tf__field input,
 .tf__field textarea {
     width: 100%;
     height: 100%;
-    font-size: 18px;
-    background: none;
+    font-size: var(--font-size);
+	color: var(--color);
+    background: $light;
     border-bottom: 1px solid #fff;
-    padding: 24px 0 4px 0;
+	border-radius: $radius-s;
+    padding: 0 var(--padding-sides);
 }
 
-.tf__field label {
+.tf__label {
     position: absolute;
     top: 50%;
-    left: 0;
+    left: var(--padding-sides);
     transform: translate(0, -50%);
     display: inline-block;
-    font-size: 18px;
+    font-size: var(--font-size);
     font-weight: 100;
-    color: #fff;
+    color: var(--color);
     pointer-events: none;
     transition: $tr;
 }
 
-.tf__field_textarea {
-
-    & label {
-        top: 14px;
-        transform: translate(0, 0);
-    }
-}
-
 ._textfield-error {
-    
+
     &::after {
         content: attr(data-textfield-error);
         display: inline-block;
