--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -92,8 +92,8 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
-		-webkit-mask: left/contain no-repeat url('data:image/svg+xml,%3Csvg width=\"56\" height=\"213\" viewBox=\"0 0 56 213\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\"%3E%3Cpath d=\"M1.5 158.213V211.213H54.5M1.5 54.2134V1.21338H54.5\" stroke=\"%23F2F4F6\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3C/svg%3E');
-		mask: left/contain no-repeat url('data:image/svg+xml,%3Csvg width=\"56\" height=\"213\" viewBox=\"0 0 56 213\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\"%3E%3Cpath d=\"M1.5 158.213V211.213H54.5M1.5 54.2134V1.21338H54.5\" stroke=\"%23F2F4F6\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3C/svg%3E');
+		-webkit-mask: left/contain no-repeat var(--icon-before, url('data:image/svg+xml,%3Csvg width=\"56\" height=\"213\" viewBox=\"0 0 56 213\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\"%3E%3Cpath d=\"M1.5 158.213V211.213H54.5M1.5 54.2134V1.21338H54.5\" stroke=\"%23F2F4F6\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3C/svg%3E'));
+		mask: left/contain no-repeat var(--icon-before, url('data:image/svg+xml,%3Csvg width=\"56\" height=\"213\" viewBox=\"0 0 56 213\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\"%3E%3Cpath d=\"M1.5 158.213V211.213H54.5M1.5 54.2134V1.21338H54.5\" stroke=\"%23F2F4F6\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3C/svg%3E'));
 	}
 
 	&::after {
@@ -103,8 +103,8 @@
 		right: 0;
 		width: 100%;
 		height: 100%;
-		-webkit-mask: right/contain no-repeat url('data:image/svg+xml,%3Csvg width=\"57\" height=\"212\" viewBox=\"0 0 57 212\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\"%3E%3Cline x1=\"56\" y1=\"158\" x2=\"56\" y2=\"211\" stroke=\"%23F2F4F6\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3Cline x1=\"1\" y1=\"211\" x2=\"55\" y2=\"211\" stroke=\"%23F2F4F6\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3Cline x1=\"56\" y1=\"1\" x2=\"56\" y2=\"54\" stroke=\"%23F2F4F6\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3Cline x1=\"1\" y1=\"1\" x2=\"55\" y2=\"1\" stroke=\"%23F2F4F6\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3C/svg%3E');
-		mask: right/contain no-repeat url('data:image/svg+xml,%3Csvg width=\"57\" height=\"212\" viewBox=\"0 0 57 212\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\"%3E%3Cline x1=\"56\" y1=\"158\" x2=\"56\" y2=\"211\" stroke=\"%23F2F4F6\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3Cline x1=\"1\" y1=\"211\" x2=\"55\" y2=\"211\" stroke=\"%23F2F4F6\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3Cline x1=\"56\" y1=\"1\" x2=\"56\" y2=\"54\" stroke=\"%23F2F4F6\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3Cline x1=\"1\" y1=\"1\" x2=\"55\" y2=\"1\" stroke=\"%23F2F4F6\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3C/svg%3E');
+		-webkit-mask: right/contain no-repeat var(--icon-after, url('data:image/svg+xml,%3Csvg width=\"57\" height=\"212\" viewBox=\"0 0 57 212\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\"%3E%3Cline x1=\"56\" y1=\"158\" x2=\"56\" y2=\"211\" stroke=\"%23F2F4F6\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3Cline x1=\"1\" y1=\"211\" x2=\"55\" y2=\"211\" stroke=\"%23F2F4F6\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3Cline x1=\"56\" y1=\"1\" x2=\"56\" y2=\"54\" stroke=\"%23F2F4F6\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3Cline x1=\"1\" y1=\"1\" x2=\"55\" y2=\"1\" stroke=\"%23F2F4F6\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3C/svg%3E'));
+		mask: right/contain no-repeat var(--icon-after, url('data:image/svg+xml,%3Csvg width=\"57\" height=\"212\" viewBox=\"0 0 57 212\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\"%3E%3Cline x1=\"56\" y1=\"158\" x2=\"56\" y2=\"211\" stroke=\"%23F2F4F6\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3Cline x1=\"1\" y1=\"211\" x2=\"55\" y2=\"211\" stroke=\"%23F2F4F6\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3Cline x1=\"56\" y1=\"1\" x2=\"56\" y2=\"54\" stroke=\"%23F2F4F6\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3Cline x1=\"1\" y1=\"1\" x2=\"55\" y2=\"1\" stroke=\"%23F2F4F6\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3C/svg%3E'));
 	}
 
 	&.is-light {
@@ -133,8 +133,9 @@
     }
 }
 
-.is-dark {
-
+.has-bg-dark {
+	color: $light;
+	background-color: $text-primary;
 }
 
 .section_ms {
