--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -1,11 +1,41 @@
 .header {
 	width: 100%;
+	color: $light;
+	background: $text-primary;
 	padding: 30px 0;
-	margin-top: 40px;
+
+	&.page-index {
+		background: transparent;
+		margin-top: 40px;
+	}
+
+	&:not(.has-logo-stable) {
+
+		@media (max-width: $hide-menu) {
+
+			& .logo .logo__path-main {
+
+				& path {
+					fill: $text-primary;
+				}
+			}
+
+			& .logo .logo__path-accent {
+
+				& path {
+					fill: $accent;
+				}
+			}
+		}
+	}
 
 	@media (max-width: 900px) {
 		margin-top: 0;
-		// margin: 0 0 70px;
+	}
+
+	@media (max-width: $hide-menu) {
+		background: transparent;
+		padding: 16px 0;
 	}
 }
 
@@ -33,7 +63,7 @@
 
 	@media (max-width: $hide-menu) {
 		position: fixed;
-		z-index: 1;
+		z-index: 2;
 		top: 0;
 		right: 0;
 		width: 100%;
@@ -227,8 +257,10 @@
 	// right: var(--padding-right);
 
 	@media (max-width: $hide-menu) {
+		--size: 24px;
+
 		display: block;
-		width: 24px;
+		// width: 24px;
 
 		& span {
 			width: 100%;
