--- a/src/scss/sections/solut/solut-cdn.scss
+++ b/src/scss/sections/solut/solut-cdn.scss
@@ -109,34 +109,34 @@
 
 }
 
-.solut-cdn__ill-text-block {
+.solut-cdn__ill-text {
 	--size-circle: 10px;
 
 	width: fit-content;
 	display: flex;
+	font-size: 20px;
+	text-transform: uppercase;
+	padding: 20px 22px;
 	margin: 40px auto 0 auto;
+
+	@include resVal(font-size, 16, 20, 600, 1400);
 
 	&.has-circle::after {
 		top: 12%;
 		right: 4%;
 	}
-}
-
-.solut-cdn__ill-text {
-	font-size: 20px;
-	padding: 20px 22px;
-
-	@include resVal(font-size, 16, 20, 600, 1400);
 
 	@media (max-width: $mobile-l) {
 		padding: 14px 20px;
 	}
 }
 
-.solut-cdn__ill-contour {
+.solut-cdn__ill-text {
+}
+
+.solut-cdn__ill-text-contour {
 	--icon-before: url('data:image/svg+xml,%3Csvg width=\"17\" height=\"60\" viewBox=\"0 0 17 60\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\"%3E%3Cline x1=\"1.5\" y1=\"45\" x2=\"1.5\" y2=\"59\" stroke=\"%23F2F4F6\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3Cpath d=\"M1.5 58.8125H15.5\" stroke=\"%23F2F4F6\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3Cline x1=\"1.5\" y1=\"1.81201\" x2=\"1.5\" y2=\"15.812\" stroke=\"%23F2F4F6\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3Cline x1=\"1.5\" y1=\"1.25684\" x2=\"15.5\" y2=\"1.25684\" stroke=\"%23F2F4F6\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3C/svg%3E');
 	--icon-after: url('data:image/svg+xml,%3Csvg width=\"18\" height=\"60\" viewBox=\"0 0 18 60\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\"%3E%3Cline x1=\"16.0361\" y1=\"45\" x2=\"16.0361\" y2=\"59\" stroke=\"%23F2F4F6\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3Cline x1=\"1.65625\" y1=\"58.8125\" x2=\"15.6562\" y2=\"58.8125\" stroke=\"%23F2F4F6\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3Cline x1=\"16.0361\" y1=\"1.81201\" x2=\"16.0361\" y2=\"15.812\" stroke=\"%23F2F4F6\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3Cline x1=\"1.65625\" y1=\"1.25684\" x2=\"15.6562\" y2=\"1.25684\" stroke=\"%23F2F4F6\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3C/svg%3E');
-
 }
 
 .solut-cdn__ill-what {
