--- a/src/scss/sections/explan.scss
+++ b/src/scss/sections/explan.scss
@@ -54,6 +54,74 @@
 	}
 }
 
+.explan__content-text {
+
+	p {
+		margin: 16px 0;
+	}
+
+	& ul {
+		margin: 36px 0;
+
+		@media (max-width: $mobile-l) {
+			margin: 24px 0;
+		}
+
+		& li {
+			position: relative;
+			margin-left: 20px;
+			padding-left: 20px;
+
+			&:not(:last-child) {
+				margin-bottom: 30px;
+
+				@media (max-width: $tablet) {
+					margin-bottom: 20px;
+				}
+
+				@media (max-width: $mobile-l) {
+					margin-bottom: 10px;
+				}
+			}
+
+			&::before {
+				content: '';
+				position: absolute;
+				top: 14px;
+				left: 0;
+				min-width: 6px;
+				width: 6px;
+				height: 6px;
+				border-radius: 50%;
+				background: $text-primary;
+
+				@media (max-width: $tablet) {
+					margin-top: 12px;
+				}
+			}
+
+			@media (max-width: $mobile-l) {
+				margin-left: 10px;
+			}
+		}
+	}
+
+	& span {
+		color: $accent;
+	}
+
+	& > * {
+
+		&:first-child {
+			margin-top: 0;
+		}
+
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+}
+
 .explan__btn {
 	max-width: 350px;
 	margin-top: 40px;
