Все сделал с адаптивом, кроме калькулятора

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -11,7 +11,7 @@
 @import "./base/textfield";
 
 // Модальные окна
-// @import "./base/modal";
+@import "./base/modal";
 
 // Аккордеоны (Спойлеры)
-@import "./base/accordion";
+// @import "./base/accordion";
