--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -119,6 +119,10 @@ body {
 @import "./components/cards/c-solutions";
 
 
+@import "./components/modals/m-plan";
+@import "./components/modals/m-loop";
+
+
 // Стили частоиспользуемых секций
 @import "./sections/header";
 @import "./sections/main";
