--- a/src/scss/sections/trans-how.scss
+++ b/src/scss/sections/trans-how.scss
@@ -6,7 +6,7 @@
 }
 
 .trans-how__container {
-
+	max-width: 1320px;
 }
 
 .trans-how__body {
@@ -49,4 +49,209 @@
 
 .trans-how__ill-img {
 	width: 100%;
+}
+
+
+
+// Таблица
+.th-table__list {
+	display: grid;
+	grid-template-columns: minmax(max-content, 686px) minmax(max-content, 637px);
+
+	@media (max-width: $container-width + px) {
+		grid-template-columns: 1fr;
+		gap: 50px;
+	}
+}
+
+.th-table {
+	display: flex;
+	flex-direction: column;
+	border: 1px solid $border-line;
+	border-radius: $radius-s;
+
+	&.is-first {
+		border-radius: $radius-s 0 0 $radius-s;
+		border-right-width: .5px;
+
+		& .th-table__ceil {
+
+			&:nth-child(1) {
+				padding-left: 60px;
+				width: 34%;
+
+				@media (max-width: $container-width + px) {
+					padding-left: 24px;
+				}
+
+				@media (max-width: $mobile-l) {
+					padding-left: 10px;
+				}
+			}
+
+			&:nth-child(2) {
+				max-width: 452px;
+				width: 66%;
+
+				@media (max-width: $container-width + px) {
+					max-width: none;
+				}
+			}
+
+			&.has-table {
+				padding: 0;
+
+				& .th-table {
+					height: 100%;
+					border: none;
+
+					& .th-table__body {
+						display: flex;
+						flex-direction: column;
+					}
+
+					& .th-table__row {
+						width: 100%;
+
+						&:first-child {
+							border-bottom: 1px solid $border-line;
+						}
+
+						& .th-table__ceil {
+
+							&:nth-child(1) {
+								width: 25%;
+								justify-content: center;
+								padding-left: 15px;
+
+								@media (max-width: $mobile-l) {
+									width: 33%;
+								}
+							}
+
+							&:nth-child(2) {
+								width: 75%;
+							}
+						}
+					}
+				}
+			}
+		}
+
+		@media (max-width: $container-width + px) {
+			border-radius: $radius-s;
+		}
+	}
+
+	&.is-second {
+		border-radius: 0 $radius-s $radius-s 0;
+		border-left-width: .5px;
+
+		& .th-table__ceil {
+
+			&:nth-child(1) {
+				min-width: 145px;
+				width: 23%;
+
+				@media (max-width: $tablet) {
+					min-width: auto;
+				}
+
+				@media (max-width: $mobile-l) {
+					width: 32%;
+				}
+
+				@media (max-width: $mobile-m) {
+					width: 40%;
+				}
+			}
+
+			&:nth-child(2) {
+				width: 35%;
+			}
+
+			&:nth-child(3) {
+				min-width: 270px;
+				width: 42%;
+
+				@media (max-width: $tablet) {
+					min-width: auto;
+				}
+			}
+		}
+
+		@media (max-width: $container-width + px) {
+			border-radius: $radius-s;
+		}
+	}
+}
+
+.th-table__header {
+	width: 100%;
+	border-bottom: 1px solid $border-line;
+
+	& .th-table__ceil {
+		font-size: 18px;
+		font-weight: 800;
+		padding: 20px 0 15px 15px;
+
+		@media (max-width: $mobile-l) {
+			font-size: 14px;
+		}
+	}
+
+	@media (max-width: $container-width + px) {
+		background: #222;
+	}
+}
+
+.th-table__row {
+	width: 100%;
+	height: 100%;
+	display: flex;
+}
+
+.th-table__ceil {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	padding: 40px 12px 30px 15px;
+
+	@media (max-width: $mobile-l) {
+		padding: 24px 12px;
+	}
+
+	&:not(:last-child) {
+		border-right: 1px solid $border-line;
+	}
+
+	& span {
+		display: block;
+		font-size: 21px;
+
+		&:not(:last-child) {
+			margin-bottom: 16px;
+
+			@media (max-width: $mobile-l) {
+				margin-bottom: 10px;
+			}
+		}
+
+		@media (max-width: $tablet) {
+			font-size: 18px;
+		}
+
+		@media (max-width: 600px) {
+			font-size: 15px;
+		}
+
+		@media (max-width: 400px) {
+			font-size: 13px;
+		}
+	}
+}
+
+.th-table__body {
+	width: 100%;
+	height: 100%;
 }
