--- a/src/scss/sections/trans-why.scss
+++ b/src/scss/sections/trans-why.scss
@@ -50,6 +50,16 @@
 	text-align: center;
 	line-height: 1.3;
 	margin-bottom: 20px;
+
+	@media (max-width: $tablet) {
+		font-size: 30px;
+		margin-bottom: 15px;
+	}
+
+	@media (max-width: $mobile-l) {
+		font-size: 23px;
+		margin-bottom: 10px;
+	}
 }
 
 .trans-why__block-text {
