--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -2,11 +2,13 @@
 	width: 100%;
 	color: $light;
 	background: $text-primary;
-	padding: 30px 0;
+	// padding: 30px 0;
+
+	padding: 20px 0;
 
 	&.page-index {
 		background: transparent;
-		margin-top: 40px;
+		// margin-top: 40px;
 	}
 
 	&:not(.has-logo-stable) {
