--- a/src/scss/sections/main.scss
+++ b/src/scss/sections/main.scss
@@ -1,8 +1,15 @@
+.main-first-screen {
+	min-height: 100%;
+	// height: 100vh;
+	// min-height: 100vh;
+	// background: $light;
+}
+
 .main {
 	position: relative;
 	width: 100%;
 	// min-height: 700px;
-	min-height: 100vh;
+	// min-height: 100vh;
 	display: flex;
 	flex-direction: column;
 	background: center/cover no-repeat $text-primary url('@img/bgs/main.jpg');
@@ -22,16 +29,22 @@
 	padding-bottom: 50px;
 	// margin: auto 0;
 
-	@media (max-width: 900px) {
-		padding-top: 70px;
-	}
+	padding: 50px 0 40px;
+
+	// @media (max-width: 900px) {
+	// 	padding-top: 70px;
+	// }
 }
 
 .main__title {
 	width: 100%;
-	font-size: 73px;
+	// font-size: 73px;
 	font-weight: 300;
 	padding: 0 24px;
+
+
+    font-size: 40px;
+    line-height: 1.2;
 
 	@media (max-width: $laptop) {
 		font-size: 60px;
@@ -61,7 +74,9 @@
 }
 
 .main-advant {
-	margin-top: 38px;
+	// margin-top: 38px;
+
+	margin-top: 24px;
 }
 
 .main-advant__list {
@@ -70,8 +85,10 @@
 }
 
 .main-advant__item {
-	font-size: 28px;
+	// font-size: 28px;
 	font-weight: 300;
+
+	font-size: 20px;
 
 	&:not(:last-child) {
 
@@ -81,15 +98,17 @@
 			width: 1px;
 			height: 20px;
 			background: $light;
-			margin: 0 110px;
+			// margin: 0 110px;
 
-			@media (max-width: $laptop) {
-				margin: 0 80px;
-			}
+			margin: 0 50px;
 
-			@media (max-width: 900px) {
-				margin: 0 50px;
-			}
+			// @media (max-width: $laptop) {
+			// 	margin: 0 80px;
+			// }
+
+			// @media (max-width: 900px) {
+			// 	margin: 0 50px;
+			// }
 
 			@media (max-width: 600px) {
 				margin: 0 30px;
@@ -117,5 +136,9 @@
 
 .main__cta {
 	width: 100%;
-	margin-top: 60px;
+	// margin-top: 60px;
+
+	height: 60px;
+	font-size: 20px;
+	margin-top: 40px;
 }
