--- a/src/scss/sections/why-us.scss
+++ b/src/scss/sections/why-us.scss
@@ -1,6 +1,18 @@
+.why-us {
+	background: $light;
+	// padding: 120px 0;
+	padding: 32px 0;
+
+	& .s-header__title {
+		// font-size: 50px;
+	}
+
+    @media (max-width: $mobile-l) {
+    }
+}
+
 .why-us__body {
 	position: relative;
-
 }
 
 .why-us__list {
@@ -70,14 +82,19 @@
 }
 
 .why-us__item-icon {
-	width: 70px;
-	height: 70px;
+	// width: 70px;
+	// height: 70px;
+
+	width: 50px;
+	height: 50px;
 }
 
 .why-us__item-title {
-	font-size: 24px;
+	// font-size: 24px;
 	text-align: center;
 	margin-top: 10px;
+
+	font-size: 20px;
 
 	@media (max-width: $tablet) {
 		font-size: 20px;
