--- a/src/scss/sections/main.scss
+++ b/src/scss/sections/main.scss
@@ -1,6 +1,8 @@
 .main-first-screen {
-	min-height: 100%;
-	// height: 100vh;
+	// min-height: 100vh;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
 	// min-height: 100vh;
 	// background: $light;
 }
@@ -8,6 +10,7 @@
 .main {
 	position: relative;
 	width: 100%;
+	height: 100%;
 	// min-height: 700px;
 	// min-height: 100vh;
 	display: flex;
@@ -29,6 +32,7 @@
 	padding-bottom: 50px;
 	// margin: auto 0;
 
+	margin: auto;
 	padding: 50px 0 40px;
 
 	// @media (max-width: 900px) {
@@ -45,6 +49,10 @@
 
     font-size: 40px;
     line-height: 1.2;
+
+	@media (min-height: 800px) {
+		font-size: 73px;
+	}
 
 	@media (max-width: $laptop) {
 		font-size: 60px;
@@ -121,6 +129,10 @@
 		}
 	}
 
+	@media (min-height: 850px) {
+		font-size: 28px;
+	}
+
 	@media (max-width: 900px) {
 		font-size: 24px;
 	}
@@ -141,4 +153,9 @@
 	height: 60px;
 	font-size: 20px;
 	margin-top: 40px;
+
+	@media (min-height: 900px) {
+		height: 80px;
+		font-size: 24px;
+	}
 }
