закрепил шапку, добавил подменю в меню

--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -1,14 +1,84 @@
+.header-area {
+	width: 100%;
+}
+
 .header {
+	position: absolute;
+	z-index: 2;
+	top: 0;
+	left: 0;
 	width: 100%;
 	color: $light;
 	background: $text-primary;
-	// padding: 30px 0;
-
 	padding: 20px 0;
+	transition: background-color $tr;
+
+	&.is-fixed {
+		position: fixed;
+		transition: transform $tr, background-color $tr;
+
+		&.is-show {
+			transform: translateY(100%);
+		}
+
+		&.is-fill {
+			background-color: $text-primary;
+		}
+
+		&.is-blur {
+			background-color: create-rgba($text-primary, .5);
+		}
+	}
 
 	&.page-index {
 		background: transparent;
-		// margin-top: 40px;
+	}
+
+	&.page-transcoding {
+
+		&.is-fixed {
+
+			& .logo {
+
+				& .logo__path-main {
+
+					& path {
+						fill: #F2F4F6;
+					}
+				}
+
+				& .logo__path-accent {
+
+					& path {
+						fill: $accent-second;
+					}
+				}
+			}
+		}
+
+		& .explan {
+
+			& .explan__content {
+				grid-template-columns: .8fr	1.2fr;
+
+				@media (max-width: $tablet) {
+					grid-template-columns: 1fr;
+				}
+			}
+
+			& .explan__content-text {
+
+				& ul {
+
+					li {
+
+						&:not(:last-child) {
+							margin-bottom: 0;
+						}
+					}
+				}
+			}
+		}
 	}
 
 	&:not(.has-logo-stable) {
@@ -132,12 +202,24 @@
 			}
 
 			@media (max-width: $hide-menu) {
-				margin: 0 0 35px 0;
+				margin: 0;
+			}
+
+			& a {
+
+				@media (max-width: $hide-menu) {
+					margin: 0 0 35px 0;
+				}
 			}
 		}
 
 		a {
 
+			@media (max-width: $hide-menu) {
+				display: inline-block;
+				width: 100%;
+				text-align: right;
+			}
 		}
 
 		@media (max-width: 900px) {
@@ -145,13 +227,119 @@
 		}
 
 		@media (max-width: $hide-menu) {
+			width: 100%;
 			font-size: 21px;
 		}
+
+		&.has-sub-menu {
+			position: relative;
+
+			@media (min-width: $hide-menu + 1px) {
+
+				&:hover {
+
+					& .sub-menu {
+						opacity: 1;
+						pointer-events: fill;
+						transform: translate(-50%, calc(100% + 50px));
+					}
+				}
+			}
+
+			@media (max-width: $hide-menu) {
+				// text-align: right;
+
+				& > a {
+					margin-bottom: 12px;
+				}
+			}
+		}
 	}
+
 
 	@media (max-width: $hide-menu) {
 		flex-direction: column;
 		align-items: flex-end;
+		padding: 0;
+	}
+}
+
+.sub-menu {
+	position: absolute;
+	z-index: 2;
+	bottom: 0;
+	left: 50%;
+	transform: translate(-50%, calc(100% + 70px));
+	background: $text-primary;
+	padding: 6px 0;
+	opacity: 0;
+	pointer-events: none;
+	transition: $tr;
+
+	&::after {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 50px;
+		transform: translateY(-100%);
+
+		@media (max-width: $hide-menu) {
+			display: none;
+		}
+	}
+
+	&::before {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 50%;
+		transform: translate(-50%, -50%) rotate(45deg);
+		width: 24px;
+		height: 24px;
+		background: $text-primary;
+		border-radius: $radius-s;
+
+		@media (max-width: $hide-menu) {
+			display: none;
+		}
+	}
+
+	& li {
+		width: 100%;
+
+		& a {
+			display: inline-block;
+			width: 100%;
+			text-align: center;
+			padding: 2px 6px;
+
+			@media (max-width: $hide-menu) {
+				font-size: 18px;
+				text-align: right;
+				padding: 0;
+				opacity: .8;
+			}
+		}
+
+		@media (max-width: $hide-menu) {
+
+			&:not(:last-child) {
+
+				& a {
+					margin-bottom: 4px;
+				}
+			}
+
+		}
+	}
+
+	@media (max-width: $hide-menu) {
+		position: initial;
+		transform: none;
+		opacity: 1;
+		pointer-events: fill;
 		padding: 0;
 	}
 }
