--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -271,7 +271,8 @@
 	left: 50%;
 	transform: translate(-50%, calc(100% + 70px));
 	background: $text-primary;
-	padding: 6px 0;
+	border-radius: 8px;
+	padding: 10px 0;
 	opacity: 0;
 	pointer-events: none;
 	transition: $tr;
@@ -312,6 +313,8 @@
 		& a {
 			display: inline-block;
 			width: 100%;
+			font-size: 18px;
+			font-weight: 100;
 			text-align: center;
 			padding: 2px 6px;
 
