--- a/src/scss/sections/main.scss
+++ b/src/scss/sections/main.scss
@@ -50,7 +50,7 @@
     font-size: 40px;
     line-height: 1.2;
 
-	@media (min-height: 800px) {
+	@media (min-height: 1000px) and (min-width: 1000px) {
 		font-size: 73px;
 	}
 
