--- a/src/scss/base/accordion.scss
+++ b/src/scss/base/accordion.scss
@@ -10,17 +10,20 @@
 .acc {
     display: block;
     transition: $tr;
-    border-top: 1px solid $text-primary;
-    border-bottom: 1px solid $text-primary;
+    // border-top: 1px solid $text-primary;
+    // border-bottom: 1px solid $text-primary;
 
-    &.is-show {
+    &.is-open {
         & > .acc__toggle {
 
-            & .acc__toggle-icon {
-                transform: scale(-1, -1);
-            }
+			& .acc__toggle-title {
+
+				&::after {
+					transform: scale(-1, -1);
+				}
+			}
         }
-        
+
         & > .acc__body {
             opacity: 1;
             visibility: visible;
@@ -30,21 +33,43 @@
 
 // Шапка аккордеона
 .acc__toggle {
-    width: 100%;
+    width: fit-content;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 16px;
+    // padding: 16px;
     text-align: left;
     cursor: pointer;
 }
 
 .acc__toggle-title {
-    font-size: 16px;
-    font-weight: 100;
-    line-height: 1.3;
+    font-size: 24px;
+    font-weight: 300;
     // pointer-events: none;
     transition: $tr;
+
+	&::after {
+		content: '';
+		width: 16px;
+		height: 16px;
+		display: inline-block;
+		-webkit-mask: center/contain no-repeat url('data:image/svg+xml,%3Csvg width=\"14\" height=\"12\" viewBox=\"0 0 14 12\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\"%3E%3Cpath d=\"M7.86602 11C7.48112 11.6667 6.51888 11.6667 6.13397 11L0.937821 2C0.552921 1.33333 1.03405 0.5 1.80385 0.5L12.1962 0.5C12.966 0.5 13.4471 1.33333 13.0622 2L7.86602 11Z\" fill=\"%23343434\"/%3E%3C/svg%3E');
+		mask: center/contain no-repeat url('data:image/svg+xml,%3Csvg width=\"14\" height=\"12\" viewBox=\"0 0 14 12\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\"%3E%3Cpath d=\"M7.86602 11C7.48112 11.6667 6.51888 11.6667 6.13397 11L0.937821 2C0.552921 1.33333 1.03405 0.5 1.80385 0.5L12.1962 0.5C12.966 0.5 13.4471 1.33333 13.0622 2L7.86602 11Z\" fill=\"%23343434\"/%3E%3C/svg%3E');
+		background: $text-primary;
+		margin-left: 13px;
+		margin-top: -4px;
+		vertical-align: middle;
+		transition: $tr;
+
+		@media (max-width: $mobile-l) {
+			width: 12px;
+			height: 12px;
+		}
+	}
+
+	@media (max-width: $mobile-l) {
+		font-size: 19px;
+	}
 }
 
 .acc__toggle-icon {
@@ -67,5 +92,6 @@
 }
 
 .acc__content {
-    padding: 0 16px 16px;
+    // padding: 0 16px 16px;
+	padding-top: 35px;
 }
