--- a/src/scss/libs/nouislider.scss
+++ b/src/scss/libs/nouislider.scss
@@ -82,13 +82,13 @@
  /* Slider size and handle placement;
   */
  .noUi-horizontal {
-   height: 18px;
+   height: 11px;
  }
  .noUi-horizontal .noUi-handle {
-   width: 34px;
-   height: 28px;
-   right: -17px;
-   top: -6px;
+   width: 25px;
+   height: 25px;
+   right: -13px;
+   top: -9px;
  }
  .noUi-vertical {
    width: 18px;
@@ -107,16 +107,14 @@
   * Giving the connect element a border radius causes issues with using transform: scale
   */
  .noUi-target {
-   background: #FAFAFA;
-   border-radius: 4px;
-   border: 1px solid #D3D3D3;
-   box-shadow: inset 0 1px 1px #F0F0F0, 0 3px 6px -5px #BBB;
+   background: #DBDBDB;
+   border-radius: 99px;
  }
  .noUi-connects {
    border-radius: 3px;
  }
  .noUi-connect {
-   background: #3FB8AF;
+   background: #FCB8B8;
  }
  /* Handles and cursors;
   */
@@ -127,40 +125,9 @@
    cursor: ns-resize;
  }
  .noUi-handle {
-   border: 1px solid #D9D9D9;
-   border-radius: 3px;
-   background: #FFF;
+   border-radius: 50%;
+   background: $accent;
    cursor: default;
-   box-shadow: inset 0 0 1px #FFF, inset 0 1px 7px #EBEBEB, 0 3px 6px -3px #BBB;
- }
- .noUi-active {
-   box-shadow: inset 0 0 1px #FFF, inset 0 1px 7px #DDD, 0 3px 6px -3px #BBB;
- }
- /* Handle stripes;
-  */
- .noUi-handle:before,
- .noUi-handle:after {
-   content: "";
-   display: block;
-   position: absolute;
-   height: 14px;
-   width: 1px;
-   background: #E8E7E6;
-   left: 14px;
-   top: 6px;
- }
- .noUi-handle:after {
-   left: 17px;
- }
- .noUi-vertical .noUi-handle:before,
- .noUi-vertical .noUi-handle:after {
-   width: 14px;
-   height: 1px;
-   left: 6px;
-   top: 14px;
- }
- .noUi-vertical .noUi-handle:after {
-   top: 17px;
  }
  /* Disabled state;
   */
