--- a/src/scss/sections/calc.scss
+++ b/src/scss/sections/calc.scss
@@ -1,3 +1,10 @@
+.calc__s-header {
+
+	@media (max-width: $mobile-l) {
+		margin-bottom: 10px;
+	}
+}
+
 .calc__body {
 
 }
@@ -12,45 +19,186 @@
 	margin-bottom: 50px;
 
 	@media (max-width: $tablet) {
+		font-size: 26px;
+		text-align: center;
 		margin-bottom: 30px;
+	}
+
+	@media (max-width: $mobile-l) {
+		font-size: 19px;
 	}
 }
 
 .calc__block {
+	display: grid;
 	border: 1px solid $text-primary;
 	border-radius: $radius-s;
 
 	&.is-trans {
+		min-height: 670px;
+		grid-template-columns: minmax(min-content, 760px) minmax(min-content, 440px);
 
+		@media (max-width: $tablet) {
+			grid-template-columns: 1fr;
+			border: none;
+		}
 	}
 
 	&.is-deliv {
+		grid-template-columns: minmax(min-content, 780px) minmax(min-content, 420px);
 
+		@media (max-width: $tablet) {
+			grid-template-columns: 1fr;
+			border: none;
+		}
+
+		& .calc__total {
+			padding: 27px 37px;
+		}
+
+		& .calc-table {
+			grid-template-columns: 1fr;
+		}
+
+		.calc-table__ceil {
+			min-height: 100px;
+			flex-direction: row;
+
+			& .calc-table__header {
+				width: 35%;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+			}
+
+			& .calc-table__body {
+				width: 65%;
+				justify-content: flex-start;
+				padding-left: 40px;
+			}
+
+			& .calc-table__list {
+				padding: 0;
+
+				& li {
+					padding: 0;
+				}
+			}
+		}
+	}
+
+	& .calc__total {
+
+		&.is-pc {
+
+			@media (max-width: $tablet) {
+				display: none;
+			}
+		}
+
+		&.is-mob {
+			display: none;
+
+			@media (max-width: $tablet) {
+				display: flex;
+				justify-content: flex-end;
+				border: none;
+				padding: 5px;
+			}
+		}
 	}
 }
 
 
 .calc__tools {
-	width: 64%;
+	min-width: 350px;
 	border-right: 1px solid $text-primary;
 	padding: 40px 50px;
+
+	& > * {
+
+		&:not(:last-child) {
+			margin-bottom: 45px;
+
+			@media (max-width: $mobile-l) {
+				margin-bottom: 30px;
+			}
+		}
+	}
+
+	@media (max-width: 950px) {
+		padding: 30px;
+	}
+
+	@media (max-width: $tablet) {
+		border: none;
+		padding: 0;
+	}
 }
 
 // Ползунок
 .calc-range__block {
+	max-width: 334px;
 
+	@media (max-width: $tablet) {
+		max-width: none;
+	}
 }
 
 .calc-range__header {
-
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .calc__title {
+	max-width: 168px;
+	font-size: 22px;
+	font-weight: 300;
+	margin-right: 12px;
 
+	@media (max-width: $mobile-l) {
+		font-size: 19px;
+		line-height: 1.15;
+	}
+}
+
+.calc-range__tf {
+	--color: $text-primary;
+
+	min-width: 116px;
+	width: fit-content;
+	border: 1px solid $text-primary;
+	border-radius: $radius-s;
+
+	& .tf__field {
+		position: relative;
+		height: 32px;
+
+		&::before {
+			content: attr(data-value);
+			display: inline-block;
+			padding: 0 12px;
+		}
+	}
+
+	& input {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background: #fff;
+		padding: 0 10px;
+
+		@media (max-width: $mobile-l) {
+			font-size: 19px;
+		}
+	}
 }
 
 .calc-range__body {
-
+	margin-top: 20px;
 }
 
 .calc-range {
@@ -61,10 +209,15 @@
 }
 
 .calc-range__info {
-
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin-top: 5px;
 }
 
 .calc-range__value {
+	font-size: 22px;
+	font-weight: 800;
 
 	&.is-min {
 
@@ -75,6 +228,297 @@
 	}
 }
 
+.calc__settings {
+
+	& > .calc-setting {
+
+		&:not(:last-child) {
+			margin-bottom: 20px;
+
+			@media (max-width: $mobile-l) {
+				margin-bottom: 28px;
+			}
+		}
+	}
+}
+
+.calc-setting {
+	width: 100%;
+	display: grid;
+	grid-template-columns: minmax(min-content, 250px) 1fr;
+	gap: 12px;
+
+	&:not(:last-child) {
+		margin-bottom: 20px;
+	}
+
+	@media (max-width: 950px) {
+		grid-template-columns: minmax(min-content, 150px) 1fr;
+	}
+
+	@media (max-width: 850px) {
+		grid-template-columns: 1fr;
+		gap: 8px;
+	}
+
+	@media (min-width: $mobile-l + 1px) and (max-width: $tablet) {
+		grid-template-columns: minmax(min-content, 150px) 1fr;
+		gap: 12px;
+	}
+}
+
+.calc-setting__title {
+	// padding-right: 12px;
+}
+
+.calc-setting__list {
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
+	margin: -3px -7px;
+}
+
+.calc-setting__radio {
+	position: relative;
+	border-radius: $radius-s;
+	margin: 3px 7px;
+
+	& input {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		opacity: 0;
+
+		&:checked {
+
+			& + span {
+				color: #fff;
+				background: $accent;
+				border-color: $accent;
+			}
+		}
+
+		&:disabled {
+			pointer-events: none;
+
+			& + span {
+				color: create-rgba($light, .7);
+				background: #ACACAC;
+				border-color: #ACACAC;
+				pointer-events: none;
+			}
+		}
+	}
+
+	& span {
+		display: inline-block;
+		width: 100%;
+		height: 100%;
+		font-size: 20px;
+		font-weight: 300;
+		line-height: 1.5;
+		border: 1px solid $text-primary;
+		border-radius: $radius-s;
+		padding: 2px 10px;
+		transition: $tr;
+	}
+
+	@media (max-width: $mobile-l) {
+		font-size: 19px;
+	}
+}
+
+.calc__acc {
+
+	& .acc__body {
+		overflow: initial;
+	}
+}
+
 .calc__info {
-	width: 36%;
+	display: flex;
+	flex-direction: column;
+}
+
+.calc__total {
+	font-size: 30px;
+	line-height: 1.3;
+	padding: 57px 24px 57px 60px;
+	border-bottom: 1px solid $text-primary;
+
+	& span {
+		display: inline-block;
+		font-size: 35px;
+		font-weight: 800;
+		color: $accent;
+		margin-left: 8px;
+	}
+}
+
+.calc-table {
+	height: 100%;
+	display: grid;
+	grid-template-columns: minmax(min-content, 180px) minmax(min-content, 260px);
+
+	@media (max-width: $tablet) {
+		grid-template-columns: 1fr 1fr;
+		margin-top: 50px;
+		border: 1px solid $text-primary;
+		border-radius: $radius-s;
+	}
+}
+
+.calc-table__ceil {
+	display: flex;
+	flex-direction: column;
+	border-bottom: 1px solid $text-primary;
+	border-right: 1px solid $text-primary;
+
+	&:nth-last-child(1),
+	&:nth-last-child(2) {
+		border-bottom: none
+	}
+
+	&:nth-child(even) {
+		border-right: none;
+	}
+
+	&.is-price {
+
+		& li {
+
+			&:not(:last-child) {
+
+				@media (max-width: $mobile-l) {
+					margin-bottom: 25px;
+				}
+			}
+		}
+
+	}
+
+	&.is-trans {
+
+		& li {
+			font-size: 17px;
+
+			&:not(:last-child) {
+				margin-bottom: 37px;
+
+				@media (max-width: $mobile-l) {
+					margin-bottom: 25px;
+				}
+			}
+
+			@media (max-width: $mobile-l) {
+				font-size: 15px;
+			}
+		}
+	}
+
+	&.is-coef {
+
+		& li {
+			font-size: 23px;
+
+			&:not(:last-child) {
+				margin-bottom: 4px;
+
+				@media (max-width: $mobile-l) {
+					margin-bottom: 9px;
+				}
+			}
+
+			@media (max-width: $mobile-l) {
+				font-size: 15px;
+			}
+		}
+	}
+
+	&.is-fps {
+
+		& li {
+
+			&:not(:last-child) {
+				margin-bottom: 8px;
+			}
+		}
+	}
+}
+
+.calc-table__header {
+	display: block;
+	font-size: 18px;
+	font-weight: 700;
+	text-align: center;
+	background: #E3E3E3;
+	padding: 12px 4px;
+
+	@media (max-width: $tablet) {
+		background: #D6D6D6;
+		padding: 5px 0;
+	}
+
+	@media (max-width: $mobile-l) {
+		font-size: 14px;
+	}
+}
+
+.calc-table__body {
+	width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.calc-table__list {
+	font-size: 21px;
+	font-weight: 300;
+	line-height: 1.4;
+	padding: 25px 4px;
+
+	& li {
+		width: fit-content;
+		padding: 0 11px;
+		border-radius: 99px;
+		text-align: center;
+		margin: 0 auto;
+		transition: $tr;
+
+		&:not(:last-child) {
+			margin-bottom: 28px;
+		}
+
+		&.is-active {
+			background: $accent;
+			color: #fff;
+		}
+
+		@media (max-width: $mobile-l) {
+			font-size: 15px;
+		}
+	}
+}
+
+.calc__correct {
+	--size-circle: 10px;
+	--icon-before: url('data:image/svg+xml,%3Csvg width=\"23\" height=\"63\" viewBox=\"0 0 23 63\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\"%3E%3Cline x1=\"1\" y1=\"42\" x2=\"1\" y2=\"60\" stroke=\"%23343434\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3Cpath d=\"M1.55762 61.1504H21.5576\" stroke=\"%23343434\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3Cline x1=\"1\" y1=\"2\" x2=\"1\" y2=\"20\" stroke=\"%23343434\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3Cline x1=\"1\" y1=\"1\" x2=\"19\" y2=\"1\" stroke=\"%23343434\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3C/svg%3E');
+	--icon-after: url('data:image/svg+xml,%3Csvg width=\"21\" height=\"61\" viewBox=\"0 0 21 61\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\"%3E%3Cline x1=\"19.9219\" y1=\"41\" x2=\"19.9219\" y2=\"59\" stroke=\"%23343434\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3Cline x1=\"1\" y1=\"59.5752\" x2=\"19\" y2=\"59.5752\" stroke=\"%23343434\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3Cline x1=\"19.9219\" y1=\"1\" x2=\"19.9219\" y2=\"19\" stroke=\"%23343434\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3Cline x1=\"1\" y1=\"1\" x2=\"19\" y2=\"1\" stroke=\"%23343434\" stroke-width=\"2\" stroke-linecap=\"round\"/%3E%3C/svg%3E');
+
+	width: fit-content;
+	font-size: 24px;
+	padding: 12px 20px;
+	margin: 70px 0 40px;
+
+	&::after {
+		right: 8px;
+	}
+
+	@media (max-width: $mobile-l) {
+		font-size: 19px;
+		padding: 20px;
+	}
 }
