страница регистрации и входа

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -145,6 +145,7 @@ body {
 @import "./pages/transcoding";
 @import "./pages/about";
 @import "./pages/media-storage";
+@import "./pages/auth";
 
 
 
