--- a/src/scss/components/modals/m-loop.scss
+++ b/src/scss/components/modals/m-loop.scss
@@ -1,11 +1,3 @@
-.m-loop {
-
-}
-
-.m-loop__wrap {
-
-}
-
 .m-loop__window {
 	position: relative;
 	color: $light;
@@ -22,8 +14,8 @@
 		border-radius: $radius-s;
 		border: 2px solid transparent;
 		background: linear-gradient(131.83deg, #E129FF -0.01%, #FF0000 20.58%, #31FDF1 44.52%, #0913FF 77.5%, #E129FF 92.13%, #31FDF1 104.06%) border-box;
-		-webkit-mask: linear-gradient(#fff 0 0) padding-box,
-		  linear-gradient(#fff 0 0);
+		-webkit-mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
+		mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
 		-webkit-mask-composite: destination-out;
 		mask-composite: exclude;
 		pointer-events: none;
